# aoc

./: Cargo.toml  README.md  package-lock.json  package.json  requirements.in  requirements.txt  tsconfig.json
2016/: .eslintrc.js  package-lock.json  package.json
2017/: .pre-commit-config.yaml  .pylintrc  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  requirements.in  requirements.txt  run.py
2018/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  18.txt  19.ipynb  2.ipynb  20.ipynb  21.ipynb  22.ipynb  23.ipynb  23_z3.ipynb  24.ipynb  25.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  (+1 more)
2024/: .gitignore  .pre-commit-config.yaml  pyproject.toml
2024/src/aoc2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  run.py
2024/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py
(+267 files in other folders)
