[project]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code 2024 Solutions"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = true
dev-dependencies = [
  "mypy",
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-watcher",
]

[tool.ruff]
lint.extend-select = ["I"]

[tool.mypy]
files = "src,tests"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
aoc-run = "aoc2024.run:main"
